--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
                     <div class="cartao_conteudo_pergunta">
-                        como funciona a agricultura?
+                        <p>funciona a agricultura?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        A plantação de milho e soja envolve o preparo do solo, a
-                        escolha da semente adequada para as condições locais, o plantio com máquinas específicas
-                        (plantadeiras) e o cuidado constante (tratos culturais) para proteger as plantas de pragas e
-                        doenças. Por fim, a colheita é realizada quando os grãos atingem o ponto ideal, garantindo a
-                        produtividade da lavoura.
+                        <p>A plantação de milho e soja envolve o preparo do solo,
+                            a escolha da semente adequada para as condições locais, o plantio com máquinas específicas
+                            (plantadeiras) e o cuidado constante (tratos culturais) para proteger as plantas de pragas e
+                            doenças. Por fim, a colheita é realizada quando os grãos atingem o ponto ideal, garantindo a
+                            produtividade da lavoura.</p>
                     </div>
                 </div>
             </article>
@@ -34,15 +34,18 @@
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
                     <div class="cartao_conteudo_pergunta">
-                        como funciona a colheita?
+                        <p>como funciona a colheita?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        O processo de colheita é a coleta de produtos agrícolas maduros, como plantas, grãos e frutos,
-                        que encerra a fase de cultivo e marca o início da utilização desses produtos. A colheita pode
-                        ser feita de forma manual, com ferramentas como foices e gadanhas, ou de forma mecanizada,
-                        utilizando colhedoras. Os métodos variam entre os tipos de cultura, mas geralmente envolvem o
-                        corte, a extração, o recolhimento, a trilha (separação do grão da planta) e o transporte dos
-                        produtos.
+                        <p>O processo de colheita é a coleta de produtos agrícolas maduros, como plantas, grãos e
+                            frutos,que encerra a fase de cultivo e marca o início da utilização desses produtos. A
+                            colheita
+                            pode ser feita de forma manual, com ferramentas como foices e gadanhas, ou de forma
+                            mecanizada,
+                            utilizando colhedoras. Os métodos variam entre os tipos de cultura, mas geralmente envolvem
+                            o
+                            corte, a extração, o recolhimento, a trilha (separação do grão da planta) e o transporte dos
+                            produtos.</p>
                     </div>
                 </div>
             </article>
