--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
                     <div class="cartao_conteudo_pergunta">
+                        <p>Como é o processo de preparação da terra para o plantio? Quais técnicas são utilizadas?</p>
+                    </div>
+                    <div class="cartao_conteudo_resposta">
+                        <p>O preparo da terra para o plantio envolve técnicas para melhorar a estrutura, a fertilidade e
+                            a saúde do solo, como preparo convencional, que revira e nivela o solo para criar uma cama
+                            de semente uniforme, e o plantio direto, onde a semente é plantada em palha, conservando
+                            umidade e reduzindo a erosão. Outras práticas incluem a calagem para corrigir a acidez, a
+                            rotação de culturas para aumentar a fertilidade, e a adubação verde. </p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao_conteudo">
+                    <h3>country life</h3>
+                    <div class="cartao_conteudo_pergunta">
                         <p>como funciona a colheita?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
