--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
                     <div class="cartao_conteudo_pergunta">
-                           <p>Como é o processo de preparação da terra para o plantio? Quais técnicas são utilizadas?</p>
+                        <p>Como é o processo de preparação da terra para o plantio? Quais técnicas são utilizadas?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
                         <p>O preparo da terra para o plantio envolve técnicas para melhorar a estrutura, a fertilidade e
@@ -61,6 +61,22 @@
                             o
                             corte, a extração, o recolhimento, a trilha (separação do grão da planta) e o transporte dos
                             produtos.</p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao_conteudo">
+                    <h3>country life</h3>
+                    <div class="cartao_conteudo_pergunta">
+                        <p>Como é o manejo de pragas e doenças nas lavouras?</p>
+                    </div>
+                    <div class="cartao_conteudo_resposta">
+                        <p>O manejo de pragas e doenças nas lavouras é feito através do Manejo Integrado de Pragas
+                            (MIP), uma estratégia que combina diversas práticas para controlar as infestações de forma
+                            sustentável. As principais táticas incluem o controle cultural (rotação de culturas, escolha
+                            de época de plantio), o controle biológico (uso de inimigos naturais), e o controle genético
+                            (uso de variedades resistentes). O controle químico é utilizado de forma seletiva e com base
+                            em um plano de manejo, sempre seguindo boas práticas e com acompanhamento técnico. </p>
                     </div>
                 </div>
             </article>
