--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
                     <div class="cartao_conteudo_pergunta">
-                        <p>funciona a agricultura?</p>
+                        <p>como funciona a agricultura?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
                         <p>A plantação de milho e soja envolve o preparo do solo,
@@ -27,6 +27,19 @@
                             (plantadeiras) e o cuidado constante (tratos culturais) para proteger as plantas de pragas e
                             doenças. Por fim, a colheita é realizada quando os grãos atingem o ponto ideal, garantindo a
                             produtividade da lavoura.</p>
+                    </div>
+                </div>
+            </article>
+            <article class="cartao">
+                <div class="cartao_conteudo">
+                    <h3>country life</h3>
+                    <div class="cartao_conteudo_pergunta">
+                        <p>Como um pulverizador funciona?</p>
+                    </div>
+                    <div class="cartao_conteudo_resposta">
+                        <p>O funcionamento de um pulverizador agrícola é baseado em um sistema de pressurização que
+                            força o líquido (solução de produtos químicos diluídos em água) a passar por um bico de
+                            pulverização, transformando-o em pequenas gotas distribuídas uniformemente sobre as plantas.</p>
                     </div>
                 </div>
             </article>
