--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <footer>
         <p>Projeto desenvolvido por Amanda, sem fins lucrativos</p>
     </footer>
+    <script src="perguntas.js"></script>
 </body>
 
 </html>
