--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <p>Projeto desenvolvido por Amanda, sem fins lucrativos</p>
     </footer>
     <script src="perguntas.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
