--- a/index.html
+++ b/index.html
@@ -15,21 +15,19 @@
 <body>
     <main>
         <section id="container">
-           <article class="cartao">
+            <article class="cartao">
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
                     <div class="cartao_conteudo_pergunta">
                         <p>como funciona a agricultura?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        <p>A plantação de milho e soja envolve o preparo do solo,
-                            a escolha da semente adequada para as condições locais, o plantio com máquinas específicas
-                            (plantadeiras) e o cuidado constante (tratos culturais) para proteger as plantas de pragas e
-                            doenças. Por fim, a colheita é realizada quando os grãos atingem o ponto ideal, garantindo a
-                            produtividade da lavoura.</p>
+                        <p> A plantação de milho e soja inclui preparar o solo, escolher sementes adequadas, plantar com
+                            máquinas específicas, cuidar das plantas para evitar pragas e doenças, e colher os grãos no
+                            ponto certo para garantir boa produtividade..</p>
                     </div>
                 </div>
-            </article> 
+            </article>
             <article class="cartao">
                 <div class="cartao_conteudo">
                     <h3>country life</h3>
@@ -39,7 +37,8 @@
                     <div class="cartao_conteudo_resposta">
                         <p>O funcionamento de um pulverizador agrícola é baseado em um sistema de pressurização que
                             força o líquido (solução de produtos químicos diluídos em água) a passar por um bico de
-                            pulverização, transformando-o em pequenas gotas distribuídas uniformemente sobre as plantas.</p>
+                            pulverização, transformando-o em pequenas gotas distribuídas uniformemente sobre as plantas.
+                        </p>
                     </div>
                 </div>
             </article>
@@ -50,11 +49,9 @@
                         <p>Como é o processo de preparação da terra para o plantio? Quais técnicas são utilizadas?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        <p>O preparo da terra para o plantio envolve técnicas para melhorar a estrutura, a fertilidade e
-                            a saúde do solo, como preparo convencional, que revira e nivela o solo para criar uma cama
-                            de semente uniforme, e o plantio direto, onde a semente é plantada em palha, conservando
-                            umidade e reduzindo a erosão. Outras práticas incluem a calagem para corrigir a acidez, a
-                            rotação de culturas para aumentar a fertilidade, e a adubação verde. </p>
+                        <p>O preparo do solo para plantio usa técnicas como preparo convencional (revirar e nivelar o
+                            solo) e plantio direto (sem revolver, preservando a palha). Também inclui calagem para
+                            corrigir acidez, rotação de culturas para melhorar a fertilidade e adubação verde. </p>
                     </div>
                 </div>
             </article>
@@ -65,15 +62,9 @@
                         <p>como funciona a colheita?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        <p>O processo de colheita é a coleta de produtos agrícolas maduros, como plantas, grãos e
-                            frutos,que encerra a fase de cultivo e marca o início da utilização desses produtos. A
-                            colheita
-                            pode ser feita de forma manual, com ferramentas como foices e gadanhas, ou de forma
-                            mecanizada,
-                            utilizando colhedoras. Os métodos variam entre os tipos de cultura, mas geralmente envolvem
-                            o
-                            corte, a extração, o recolhimento, a trilha (separação do grão da planta) e o transporte dos
-                            produtos.</p>
+                        <p>A colheita é a coleta dos produtos agrícolas maduros, que pode ser manual (com foices e
+                            gadanhas) ou mecanizada (com colhedoras). Envolve cortar, separar o grão da planta e
+                            transportar os produtos, encerrando o cultivo.</p>
                     </div>
                 </div>
             </article>
@@ -84,12 +75,9 @@
                         <p>Como é o manejo de pragas e doenças nas lavouras?</p>
                     </div>
                     <div class="cartao_conteudo_resposta">
-                        <p>O manejo de pragas e doenças nas lavouras é feito através do Manejo Integrado de Pragas
-                            (MIP), uma estratégia que combina diversas práticas para controlar as infestações de forma
-                            sustentável. As principais táticas incluem o controle cultural (rotação de culturas, escolha
-                            de época de plantio), o controle biológico (uso de inimigos naturais), e o controle genético
-                            (uso de variedades resistentes). O controle químico é utilizado de forma seletiva e com base
-                            em um plano de manejo, sempre seguindo boas práticas e com acompanhamento técnico. </p>
+                        <p>O manejo de pragas e doenças usa o Manejo Integrado de Pragas (MIP), que combina controle
+                            cultural, biológico e genético, além do controle químico seletivo e acompanhado, para
+                            controlar infestações de forma sustentável. </p>
                     </div>
                 </div>
             </article>
